# operations-guide

./: .gitignore  .gitreview  .zuul.yaml  README  README.rst  atlas.json  bindep.txt  doc-test.conf  doc-tools-check-languages.conf  setup.cfg  test-requirements.txt  tox.ini
.tx/: config
doc/: requirements.txt
doc/glossary/: README.rst  glossary-terms.xml
doc/openstack-ops/: acknowledgements.xml  app_crypt.xml  app_roadmaps.xml  app_usecases.xml  bk_ops_guide.xml  ch_arch_cloud_controller.xml  ch_arch_compute_nodes.xml  ch_arch_example.xml  ch_arch_examples.xml  ch_arch_network_design.xml  ch_arch_provision.xml  ch_arch_scaling.xml  ch_arch_storage.xml  ch_ops_advanced_configuration.xml  ch_ops_backup_recovery.xml  ch_ops_customize.xml  ch_ops_lay_of_land.xml  ch_ops_log_monitor.xml  ch_ops_maintenance.xml  ch_ops_network_troubleshooting.xml  ch_ops_projects_users.xml  ch_ops_resources.xml  ch_ops_upgrades.xml  ch_ops_upstream.xml  ch_ops_user_facing.xml  glossary-terms.xml  openstack.ent  part_architecture.xml  part_operations.xml  pom.xml  preface_ops.xml  section_arch_example-neutron.xml  section_arch_example-nova.xml  section_conventions.xml
doc/source/: acknowledgements.rst  app-crypt.rst  app-resources.rst  app-roadmaps.rst  app-usecases.rst  conf.py  index.rst  ops-advanced-configuration.rst  ops-capacity-planning-scaling.rst  ops-customize-compute.rst  ops-customize-dashboard.rst  ops-customize-development.rst  ops-monitoring.rst  (+13 more)
pdf/: pdf.xsl
tools/: build-all-rst.sh  generatedocbook  generatepot  generatepot-rst.sh  glossary-sort.sh  test-languages.sh
(+126 files in other folders)
