[metadata]
name = operations-guide
summary = OpenStack Operations Guide
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://docs.openstack.org/operations-guide
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
